@@ -1,3 +1,5 @@
+2006/4/7 -- released version 20060407_trunk
+
 2006/4/6 -- released version 20060406_trunk
 
 2006/4/5 -- released version 20060405_trunk
